--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tra Cứu Điểm</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
+    <meta property="og:title" content="Tra cứu điểm thi THPT 2024">
+    <meta property="og:description" content="National High School Exam Results Lookup 2024.">
+    <meta property="og:image" content="./diemthithpt-2024.png" -->
 </head>
 <body>
     <div class="container">
