--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
     <meta property="og:title" content="Tra cứu điểm thi THPT 2024">
     <meta property="og:description" content="National High School Exam Results Lookup 2024.">
-    <meta property="og:image" content="./diemthithpt-2024.png" -->
+    <meta property="og:image" content="./diemthithpt-2024.png">
 </head>
 <body>
     <div class="container">
@@ -19,7 +19,9 @@
             <button type="submit">Tra Cứu</button>
         </form>
         <div id="result"></div>
+        <div id="loading" class="loading">Loading...</div>
     </div>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script src="./script.js"></script>
 </body>
