--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button type="submit">Tra Cứu</button>
         </form>
         <div id="result"></div>
-        <div id="loading" class="loading">Loading...</div>
+        <div id="loading" class="loading">Đang cập nhật điểm...</div>
     </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
